--- a/RMarkdown_leaflet.html
+++ b/RMarkdown_leaflet.html
@@ -205,13 +205,15 @@ $(document).ready(function () {
 <p>Create a web page using R Markdown that features a map created with Leaflet.</p>
 <p>Host your webpage on either GitHub Pages, RPubs, or NeoCities.</p>
 <p>Your webpage must contain the date that you created the document, and it must contain a map created with Leaflet. We would love to see you show off your creativity!</p>
+<pre class="r"><code>date()</code></pre>
+<pre><code>## [1] &quot;Wed Dec 26 12:31:23 2018&quot;</code></pre>
 <pre class="r"><code>library (leaflet)
 my_map &lt;- leaflet () %&gt;% 
     addTiles() %&gt;%
     addMarkers(lat=-4.306579, lng=15.297951, popup=&quot;Population explosion&quot;)
 my_map</code></pre>
-<div id="htmlwidget-8883e6f64bff0d25e57a" style="width:672px;height:480px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-8883e6f64bff0d25e57a">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addMarkers","args":[-4.306579,15.297951,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"Population explosion",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-4.306579,-4.306579],"lng":[15.297951,15.297951]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-4707c8827f260608b5ef" style="width:672px;height:480px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-4707c8827f260608b5ef">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addMarkers","args":[-4.306579,15.297951,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"Population explosion",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-4.306579,-4.306579],"lng":[15.297951,15.297951]}},"evals":[],"jsHooks":[]}</script>
 </div>
 
 
